# diagnostic_analyzer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/diagnostic_analyzer/: diagnostic_analyzer.py  main.py
tests/integration/: ATE_diagnostic.log.1  ATE_diagnostic.log.2  diagnostic_log_file_generator.py  generate_diagnostic_log_file.py
tests/integration/logs/: ATE_diagnostic.log.1  ATE_diagnostic.log.2
tests/integration/logs/unusual_time_intervalls/: ATE_diagnostic.log.1  ATE_diagnostic.log.2
